# firefly2

./: .gitignore  CLAUDE.md  CMakeLists.txt  GETTING_STARTED.md  README.md  _autosave-firefly2.kicad_pcb  arduino_ci.sh  bossac_wrapper.sh  ci.sh  firefly2-B.SilkS.gbr  firefly2-cache.lib  firefly2.bak  firefly2.drl  firefly2.kicad_pcb  firefly2.kicad_pcb-bak  firefly2.net  firefly2.pro  firefly2.sch  lint.sh  platformio.ini  program.sh  upload_node.sh
.github/codeql/: codeql-config.yml
.github/workflows/: build-platformio.yaml  codeql.yml  run-lint.yaml  run-tests.yaml
assembly/: firefly_v2.0_bom.csv
assembly/gerber/: firefly2-F.Mask.gbr  firefly2.kicad_pcb  firefly2.xml
boards/: generic_stm32g030c8t.json  generic_stm32g070cbt.json
bootloader/: 99-candy-kingdom.rules  README.md  ft232h_swd.cfg  program.sh  update-bootloader-rfboard-v3.6.0-204-g32f5431.uf2
cmake/cmake-fetch-content/: .gitrepo  README.md  fetch-content-shim.cmake
hardware/: .gitignore  _autosave-firefly2.kicad_pcb  _saved_firefly2.sch  firefly2-B.Cu.gbr  firefly2-B.Fab.gbr  firefly2-B.Mask.gbr  firefly2-B.Paste.gbr  firefly2-B.SilkS.gbr  firefly2-Edge.Cuts.gbr  firefly2-F.Cu.gbr  firefly2-F.Fab.gbr  firefly2-F.Mask.gbr  firefly2-F.Paste.gbr  firefly2-F.SilkS.gbr  firefly2-bottom.pos  firefly2-cache.lib  firefly2-top.pos  firefly2.bak  firefly2.csv  firefly2.drl  firefly2.kicad_pcb  firefly2.kicad_pcb-bak  firefly2.net  firefly2.pro  firefly2.sch  firefly2.xml
hardware/controller/: controller  controller-all-pos.csv  controller-cache.lib  controller-rescue.lib  controller.kicad_pcb  controller.kicad_pcb-bak  controller.kicad_pro  controller.kicad_sch  controller.pro  controller.sch  controller.sch-bak  controller.xml  controller_bom_jlc.csv  controller_cpl_jlc.csv  fp-info-cache  sym-lib-table
hardware/fancy-node/: fancy-node  fancy-node-all-pos.csv  fancy-node.kicad_pcb  fancy-node.kicad_pro  fancy-node.kicad_sch  fancy-node.xml  fancy-node_bom_jlc.csv  fancy-node_cpl_jlc.csv  sym-lib-table
hardware/gerber/: firefly2-B.CrtYd.gbr  firefly2-B.Cu.gbr  firefly2-B.Fab.gbr  firefly2-B.Mask.gbr  firefly2-B.Paste.gbr  firefly2-B.SilkS.gbr  firefly2-Edge.Cuts.gbr  firefly2-F.CrtYd.gbr  firefly2-F.Cu.gbr  firefly2-F.Fab.gbr  firefly2-F.Mask.gbr  firefly2-F.Paste.gbr  firefly2-F.SilkS.gbr  firefly2-Margin.gbr  firefly2.drl
hardware/magnet-connector/: magnet-connector.kicad_pcb  magnet-connector.kicad_pro  magnet-connector.kicad_sch
hardware/puck/: firefly2-cache.lib  firefly2.bak
hardware/remote/: README.md  fp-lib-table  homebrew_button.bak  homebrew_button.bck  homebrew_button.lib  rf_remote-cache.lib  rf_remote-rescue.lib  rf_remote.bak  rf_remote.kicad_pcb  rf_remote.kicad_pcb-bak  rf_remote.net  rf_remote.pro  rf_remote.sch  rfboard-cache.lib  rfboard.bak  rfboard.net  sym-lib-table
hardware/rescue-backup/: firefly2-2022-04-03-11-42-08.sch
hardware/rfboard/: .gitignore  fp-info-cache  rfboard-B_Cu.gbr  rfboard-B_SilkS.gbr  rfboard-rescue.kicad_sym  rfboard.kicad_pcb  rfboard.kicad_pcb-bak  rfboard.kicad_pro  rfboard.kicad_sch  rfboard.net  rfboard.pro  rfboard.sch  rfboard_v1.6.step  sym-lib-table
hardware/ring-40mm/: ring-40mm.kicad_pcb  ring-40mm.kicad_pro  ring-40mm.kicad_sch  ring-40mm.xml
hardware/ring-50mm/: ring-50mm  ring-50mm-all-pos.csv  ring-50mm.kicad_pcb  ring-50mm.kicad_pro  ring-50mm.kicad_sch  ring-50mm.xml  ring-50mm_bom_jlc.csv  ring-50mm_cpl_jlc.csv
lib/arduino/: FastLedManager.cpp  FastLedManager.hpp  RadioHeadRadio.hpp
lib/battery/: Battery.hpp
lib/color/: ColorPalette.cpp  ColorPalette.hpp
lib/debug/: Debug.cpp  Debug.hpp
lib/device/: .Devices.hpp.swp  DeviceDescription.cpp  DeviceDescription.hpp  DeviceTable.hpp  Devices.hpp  StripDescription.cpp  StripDescription.hpp
lib/effect/: ColorCycleEffect.cpp  ColorCycleEffect.hpp  ColorPalette.hpp  ContrastBumpsEffect.cpp  ContrastBumpsEffect.hpp  ControlEffect.cpp  ControlEffect.hpp  DarkEffect.cpp  DarkEffect.hpp  DisplayColorPaletteEffect.cpp  DisplayColorPaletteEffect.hpp  Effect.cpp  Effect.hpp  Effects.hpp  FireEffect.cpp  FireEffect.hpp  FireflyEffect.cpp  FireflyEffect.hpp  LightningEffect.cpp  LightningEffect.hpp  Perlin.hpp  PoliceEffect.cpp  PoliceEffect.hpp  PrideEffect.cpp  PrideEffect.hpp  RainbowBumpsEffect.cpp  RainbowBumpsEffect.hpp  RainbowEffect.cpp  RainbowEffect.hpp  RorschachEffect.cpp  RorschachEffect.hpp  SimpleBlinkEffect.cpp  SparkEffect.cpp  (+6 more)
lib/simulator/: CMakeLists.txt  Simulator.cpp  SimulatorLedManager.hpp
software/: README.md  format.sh  start_config
software/generic/: CMakeLists.txt  ColorCycleEffect.cpp  ColorCycleEffect.hpp  ColorPalette.cpp  ColorPalette.hpp  ContrastBumpsEffect.cpp  ContrastBumpsEffect.hpp  ControlEffect.cpp  ControlEffect.hpp  DarkEffect.cpp  DarkEffect.hpp  Debug.cpp  Debug.hpp  DeviceDescription.cpp  DeviceDescription.hpp  DisplayColorPaletteEffect.cpp  DisplayColorPaletteEffect.hpp  Effect.cpp  Effect.hpp  FireEffect.cpp  FireEffect.hpp  FireflyEffect.cpp  FireflyEffect.hpp  LedManager.cpp  LedManager.hpp  LightningEffect.cpp  LightningEffect.hpp  Math.cpp  Math.hpp  NetworkManager.cpp  NetworkManager.hpp  Perlin.hpp  PoliceEffect.cpp  PoliceEffect.hpp  Radio.cpp  Radio.hpp  RadioStateMachine.cpp  RadioStateMachine.hpp  RainbowBumpsEffect.cpp  RainbowBumpsEffect.hpp  (+16 more)
software/generic/FakeFastLED/: FastLED.h  README.md  colorutils.cpp  hsv2rgb.cpp  lib8tion.cpp  lib8tion.h
software/generic/test/: ColorPaletteTest.cpp  DebugTest.cpp  DeviceDescriptionTest.cpp  EffectsTest.cpp  FakeLedManager.cpp  FakeLedManager.hpp  FakeNetwork.cpp  FakeNetwork.hpp  FakeRadio.cpp  FakeRadio.hpp  InvalidPacketTest.cpp  LedManagerTest.cpp  MathTest.cpp  NetworkManagerTest.cpp  PerlinTest.cpp  RadioIntegrationTest.hpp  RadioPacketTest.cpp  RadioStateIntegrationTest.cpp  RadioStateMachineTest.cpp  RadioTest.cpp
src/: README.md
test/: ColorPaletteTest.cpp  EffectsTest.cpp  FakeNetwork.cpp  FakeNetwork.hpp  InvalidPacketTest.cpp  LedManagerTest.cpp  MathTest.cpp  NetworkManagerTest.cpp  RadioIntegrationTest.hpp  RadioStateIntegrationTest.cpp  RadioStateMachineTest.cpp
(+400 files in other folders)
